1999-07-18  Karl Fogel  <kfogel@floss.red-bean.com>

	* edit.c (notify_do): chop newline, if any, from the value
	obtained from CVSROOT/users.  Otherwise it just gets passed along
	in the argument to the notification program (usually mail), which
	will misinterpret it as signifying the end of the command.

1999-07-19  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_delete_revs): In the WIN32 kludge, be sure that the result
	of RCS_getexpand is not NULL before trying to use what it points to.
	(Patch submitted by Timothy L. Taylor <ttaylor@mitre.org>.)

1999-07-16  Tom Tromey  <tromey@cygnus.com>

	* admin.c (admin): Allow `-k' options to be used unrestricted.

1999-06-23  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (symlinks2): New test, for symlinks in working
	directory without PreservePermissions.  This test (modulo a few
	details not relevant to testing whether we are following symlinks)
	worked remote as of now, or either remote or local for CVS 1.9.
	* subr.c (get_file): Revert 1998-02-15 change to special-case
	symlinks.  This makes the above test work local too.
	* rcs.c (RCS_checkin): Move the logic to handle special-case
	symlinks (and other files other than regular files) here, and make
	it only happen if PreservePermissions is on.

1999-06-18  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (devcom3-9a): Be less specific about the expected
	error message (BSD/OS 4.0 has a bug that can cause exec* to fail
	with EACCES instead of ENOENT).

1999-06-08  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (diff-4, dirs2-10, tagf-13, importc-7, conflicts2-142b8):
	Use ${PROG} instead of "cvs".

1999-06-05  Jim Kingdon  <http://www.cyclic.com>

	* recurse.c (do_recursion, do_dir_proc): Make the SERVER_ACTIVE
	#ifdef be only around the check for server_active.  Modulo a few
	cosmetic tweaks, same as a patch submitted by Johannes Stezenbach
	of propack-data.de.

1999-06-01  Jim Kingdon  <http://www.cyclic.com>
